[package]
name = "tokio-future-lock"
version = "0.1.0"
authors = ["Taiga Nakayama <dora@dora-gt.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.1.29", default-features = false }
tokio = { version = "0.1.22", features = [ "rt-full" ] }
log = { version = "0.4.8", default-features = false }
env_logger = { version = "0.7.0", default-features = false }
